sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: value T
    while (T(i)<T(j) && j>0){
           ^AlgBubbleSort1:7: error: not found: value T
    while (T(i)<T(j) && j>0){
                ^